--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -16,3 +16,11 @@ Add your custom css here. Do not touch on style-color-name.css files
 .ceiling-list a:not(.btn):hover{
 	color: #2E71B3;
 }
+
+#section-header {
+	background-color: black;
+}
+
+#section-header ul.menu li a.active {
+	color:white;
+}
