--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -21,9 +21,8 @@ Add your custom css here. Do not touch on style-color-name.css files
 	background-color: black;
 }
 
-#section-header {
-	.dexp-dropdown >ul>li>span.nolink:before{
-		background-color:white;
+#section-header .dexp-dropdown >ul>li>a:before, #section-header .dexp-dropdown >ul>li>span.no-link:before{
+	background: white;
 }
 
 #section-header ul.menu li a.active {
