--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -25,6 +25,11 @@ Add your custom css here. Do not touch on style-color-name.css files
 	background: white;
 }
 
+#section-header ul.menu li a{
+	font-size: 12px;
+	text-transform: uppercase;
+}
+
 #section-header ul.menu li a.active {
 	color:white;
 }
