--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -33,3 +33,98 @@ Add your custom css here. Do not touch on style-color-name.css files
 #section-header ul.menu li a.active {
 	color:white;
 }
+
+#___gcse_1 {
+    position: absolute;
+    top: 12px;
+    right: 0;
+    text-align: right;
+    z-index: 100;
+}
+
+form.gsc-search-box {
+    font-size: 13px;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 4px;
+    margin-left: 0;
+    width: 100%;
+}
+
+#___gcse_1 table.gsc-search-box td.gsc-input {
+    height: 30px;
+    padding: 0;
+    width: 25px;
+}
+table.gsc-search-box td.gsc-input {
+    padding-right: 12px;
+}
+
+table.gsc-search-box td {
+    vertical-align: middle;
+}
+
+#___gcse_1 table.gsc-search-box td.gsc-input input.gsc-input {
+    background: none!important;
+    border: none;
+    border-radius: 3px;
+    color: transparent;
+    cursor: pointer;
+    font-size: 1.1rem;
+    height: 25px;
+    margin: 0;
+    position: relative;
+    top: 5px;
+    width: 25px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    transition: all .2s;
+}
+<style>…</style>.gsc-input input.gsc-input {
+    background: none repeat scroll 0% 0% white !important;
+}
+<style>…</style>input.gsc-input {
+    border-color: #D9D9D9;
+}
+input.gsc-input {
+    border-color: #D9D9D9;
+    font-size: 13px;
+    padding: 1px 6px;
+}
+input.gsc-input {
+    padding: 1px 6px;
+    border: 1px solid #DDD;
+    width: 99%;
+}
+
+table.gsc-search-box td {
+    vertical-align: middle;
+}
+td.gsc-search-button {
+    width: 1%;
+}
+
+td.gsc-clear-button {
+    width: 14px;
+}
+
+#___gcse_1 table.gsc-search-box .gsc-clear-button, #___gcse_1 table.gsc-search-box input.gsc-search-button {
+    display: none;
+}
+
+table.gsc-branding, table.gcsc-branding {
+    border-style: none;
+    border-width: 0;
+    border-spacing: 0 0;
+    width: 100%;
+}
+table.gsc-branding td, table.gsc-branding, table.gcsc-branding td, table.gcsc-branding {
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    border: none;
+}
+.cse .gsc-branding, .gsc-branding {
+    display: none;
+}
