--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -37,6 +37,17 @@ Add your custom css here. Do not touch on style-color-name.css files
 .region-content{width:500px;}
 .region-right-sidebar{width:500px;}
 
+.view-header{
+	font-family: Montserrat, Helvetica, Arial, sans-serif; 
+	color: rgb(51, 51, 51); 
+	font-weight: 200; 
+	font-size: 30px;
+}
+
+
+
+
+
 #___gcse_1 {
     position: absolute;
     top: 12px;
