--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -71,7 +71,7 @@ Add your custom css here. Do not touch on style-color-name.css files
 	margin: 0 auto;
 }
 
-
+.view-solutions {    background: #f2f5f5;}
 
 
 
