--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -42,6 +42,7 @@ Add your custom css here. Do not touch on style-color-name.css files
 	color: rgb(51, 51, 51); 
 	font-weight: 200; 
 	font-size: 30px;
+	font-align:center;
 }
 
 .view-solutions .col-lg-2 {
@@ -55,7 +56,6 @@ Add your custom css here. Do not touch on style-color-name.css files
 	font-weight: 400;
     -webkit-font-smoothing: antialiased;
     font-size: 1.4rem;
-    color: #4c4c4c;
 }
 
 .view-solutions .views-field-title a:not(.btn){
