--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -75,29 +75,29 @@ Add your custom css here. Do not touch on style-color-name.css files
 	background: #f2f5f5;
 }
 
-.free-advice
-{
+.free-advice {
 	font-family: Montserrat, Helvetica, Arial, sans-serif; 
 	color: rgb(51, 51, 51); 
 	font-weight: 200; 
 	font-size: 30px;
 	text-align:center;
-	background: ##4c4c4c;
+	background: #4c4c4c;
 }
 
-.view-newsevents{
+.view-newsevents {
 	background: #f2f5f5;
 }
-.news-events:hover {
+.view-newsevents .dexp-grid-item:hover {
     background-color: #666;
 }
 
-.news-events {
+.view-newsevents .dexp-grid-item {
     background-color: #fff;
     padding: 30px;
     cursor: pointer;
     color: #666;
     text-align: left;
+    width:350px;
 }
 
 #___gcse_1 {
