--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -104,15 +104,13 @@ Add your custom css here. Do not touch on style-color-name.css files
     width:350px;
 }
 
-.view-newsevents .views-field-field-date a:not(.btn):hover{
+.view-newsevents .views-field-field-rackerdate a:not(.btn):hover{
 	color:#666;
-}
-
-.view-newsevents .views-field-field-date {
-	font-color:#666;
 	font-weight: 800!important;
 	margin-bottom: 20px;
 }
+
+
 
 .view-newsevents .views-field-field-title {
 	font-color:black;
