news-events rackerdate css test

--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -104,15 +104,19 @@ Add your custom css here. Do not touch on style-color-name.css files
     width:350px;
 }
 
-.view-newsevents .views-field-field-rackerdate a:not(.btn):hover{
+.view-newsevents .views-field-field-rackerdate {
 	color:#666;
 	font-weight: 800!important;
+	font-size:28px;
 	margin-bottom: 20px;
 }
 
+.view-newsevents .views-field-field-rackerdate a:(.btn):hover{
+	color:#2a2a2a;
+}
 
 
-.view-newsevents .views-field-field-title {
+.view-newsevents .views-field-title {
 	font-color:black;
 	font-weight: 700!important;
 	font-size:21px!important;
