--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -111,7 +111,7 @@ Add your custom css here. Do not touch on style-color-name.css files
 	margin-bottom: 20px;
 }
 
-.view-newsevents .views-field-field-rackerdate a:(.btn):hover{
+.view-newsevents a:(.btn):hover{
 	color:#2a2a2a;
 }
 
