--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -104,7 +104,7 @@ Add your custom css here. Do not touch on style-color-name.css files
     width:325px;
 }
 
-.view-newsevents .views-field-field-rackerdate {
+.view-newsevents .views-field-field-rackerdate a:not:hover{
 	color:#666;
 	font-weight: 800!important;
 	font-size:18px;
@@ -112,11 +112,11 @@ Add your custom css here. Do not touch on style-color-name.css files
 }
 
 .view-newsevents .views-field-field-rackerdate a:hover{
-	color:#2a2a2a;
+	color:#666;
 }
 
 
-.view-newsevents .views-field-title{
+.view-newsevents .views-field-title a:not:hover{
 	font-color:black;
 	font-weight: 700!important;
 	font-size:21px!important;
@@ -125,11 +125,11 @@ Add your custom css here. Do not touch on style-color-name.css files
 }
 
 .view-newsevents .views-field-title a:hover{
-	color:#2a2a2a;
+	color:#666;
 }
 
-.view-newsevents .views-field-field-summary{
-	font-color:#2a2a2a;
+.view-newsevents .views-field-field-summary a:not:hover{
+	font-color:#666;
 	font-weight: 400!important;
 	font-size:14px!important;
 	margin-bottom: 20px;
