--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -106,23 +106,23 @@ Add your custom css here. Do not touch on style-color-name.css files
     width:325px;
 }
 
-.view-newsevents .views-field-field-rackerdate a:not(.btn):hover{
+.view-newsevents .views-field-field-rackerdate a{
 	color:#666;
 	font-weight: 800!important;
 	font-size:18px;
 	margin-bottom: 20px;
 }
 
-.view-newsevents .views-field-title a:not(.btn):hover{
-	font-color:black;
+.view-newsevents .views-field-title a{
+	color:black;
 	font-weight: 700!important;
 	font-size:21px!important;
 	line-height: 24px!important;
 	margin-bottom: 20px;
 }
 
-.view-newsevents .views-field-field-summary a:not(.btn):hover{
-	font-color:#666;
+.view-newsevents .views-field-field-summary a{
+	color:#666;
 	font-weight: 400!important;
 	font-size:14px!important;
 	margin-bottom: 20px;
