--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -112,7 +112,7 @@ Add your custom css here. Do not touch on style-color-name.css files
 }
 
 .view-newsevents .views-field-title a{
-	color:000000;
+	color:#000000;
 	font-weight: 700!important;
 	font-size:21px!important;
 	line-height: 24px!important;
@@ -123,6 +123,13 @@ Add your custom css here. Do not touch on style-color-name.css files
 	color:#666;
 	font-weight: 400!important;
 	font-size:14px!important;
+	margin-bottom: 20px;
+}
+
+.view-newsevents .views-field-body-1 a{
+	color:#666;
+	font-weight: 700!important;
+	font-size:18px!important;
 	margin-bottom: 20px;
 }
 
