--- a/sites/all/themes/themes/orane/assets/css/custom.css
+++ b/sites/all/themes/themes/orane/assets/css/custom.css
@@ -162,8 +162,14 @@ Add your custom css here. Do not touch on style-color-name.css files
 }
 
 #section-bottom{
-	background-color: #666;
+	background-color: #2E71B3;
+	background-image: none;
 }
+
+
+
+
+
 
 #___gcse_1 {
     position: absolute;
